--- a/dev/index.html
+++ b/dev/index.html
@@ -22,31 +22,34 @@
 </head>
 <body>
 
-<div class="container-fluid jumbotron primary-header text-center">
-	
+<div class="container-fluid primary-menu">
 	<div class="row">
-		<h1>Page / Post Heading
+		<ul class="nav navbar-nav">
+			<li><a href="index.html">index</a></li>
+			<li><a href="post.html">post</a></li>
+			<li><a href="category.html">category / archive</a></li>
+			<li><a href="page.html">page</a></li>
+			<li><a href="contact">contact</a></li>
+		</ul>
+		<form class="navbar-form pull-right" role="search">
+			<div class="input-group form-group">
+				<input type="text" placeholder="search" class="form-control" />
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-success">S</button>
+				</span>
+			</div>
+		</form>
+	</div><!-- /.row -->
+</div><!-- /.container-fluid -->
+
+<div class="container-fluid jumbotron primary-header text-center">	
+	<div class="row">
+		<h1><span class="badge">New</span> Page / Post Heading
 		 	<small>sub heading will go here</small>
 		</h1>
 	</div><!-- /.row -->
 </div><!-- /.jumbotron -->
 
-<div class="container-fluid primary-menu">
-	<div class="row">
-		<ul class="nav navbar-nav">
-			<li><a href="#">LINK</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">longer link</a></li>
-		</ul>
-		<form class="navbar-form navbar-right" role="search">
-			<div class="form-group">
-				<input type="text" placeholder="search" class="form-control" />
-			</div>
-			<button type="submit" class="btn btn-success btn-small">S</button>
-		</form>
-
-	</div><!-- /.row -->
-</div><!-- /.container-fluid -->	
 
 
 
@@ -55,7 +58,8 @@
 	  <div class="col-md-12">
 	  		 	  		
 			<article class="text-left">
-				<h3>Post Title <span class="badge">New</span></h3>
+				<h3 class="text-center"><span class="badge">New</span> Post Title</h3>
+				<p class="blog-post-meta">published: 01/01/1900 by <a href="#">author</a></p>
 				<p>
 				sit amet meatloaf beef ribs ribeye hamburger shankle turducken swine salami leberkas prosciutto. Strip steak tri-tip leberkas flank, ham salami kevin drumstick shoulder corned beef pork chop. Sausage short ribs venison beef ribs, pork biltong sirloin shank chicken flank beef landjaeger strip steak ham hock. Sirloin bresaola bacon, filet mignon turkey doner jowl salami spare ribs andouille ground round tenderloin. Meatloaf shoulder chicken, brisket swine pork loin pig ham bresaola tri-tip turducken fatback filet mignon. Meatloaf meatball prosciutto, doner turducken rump kevin t-bone strip steak boudin. Pork loin turkey tongue t-bone porchetta chuck pastrami turducken.	  				
 				</p>
@@ -67,21 +71,10 @@
 				</p>			
 			</article>
 		
-			<hr />
-				
-			<article class="text-left" style="font-family: 'Josefin', serif;">
-				<h1>Josefin <span class="badge">New</span></h1>
-				<h2>Josefin <span class="badge">New</span></h2>
-				<h3>Josefin <span class="badge">New</span></h3>
-				<h4>Josefin <span class="badge">New</span></h4>
-				<h5>Josefin <span class="badge">New</span></h5>
-				<h6>Josefin <span class="badge">New</span></h6>
-			</article>
-
-<hr />	
+			<hr />	
 
 			<article class="text-left">
-				<h3>Post Title <span class="badge">New</span></h3>
+				<h3 class="text-center">Post Title <span class="badge">New</span></h3>
 				<p>
 				sit amet meatloaf beef ribs ribeye hamburger shankle turducken swine salami leberkas prosciutto. Strip steak tri-tip leberkas flank, ham salami kevin drumstick shoulder corned beef pork chop. Sausage short ribs venison beef ribs, pork biltong sirloin shank chicken flank beef landjaeger strip steak ham hock. Sirloin bresaola bacon, filet mignon turkey doner jowl salami spare ribs andouille ground round tenderloin. Meatloaf shoulder chicken, brisket swine pork loin pig ham bresaola tri-tip turducken fatback filet mignon. Meatloaf meatball prosciutto, doner turducken rump kevin t-bone strip steak boudin. Pork loin turkey tongue t-bone porchetta chuck pastrami turducken.	  				
 				</p>
@@ -91,6 +84,17 @@
 				<p>
 				sit amet meatloaf beef ribs ribeye hamburger shankle turducken swine salami leberkas prosciutto. Strip steak tri-tip leberkas flank, ham salami kevin drumstick shoulder corned beef pork chop. Sausage short ribs venison beef ribs, pork biltong sirloin shank chicken flank beef landjaeger strip steak ham hock. Sirloin bresaola bacon, filet mignon turkey doner jowl salami spare ribs andouille ground round tenderloin. Meatloaf shoulder chicken, brisket swine pork loin pig ham bresaola tri-tip turducken fatback filet mignon. Meatloaf meatball prosciutto, doner turducken rump kevin t-bone strip steak boudin. Pork loin turkey tongue t-bone porchetta chuck pastrami turducken.	  				
 				</p>			
+			</article>
+
+			<hr />
+
+			<article class="text-left" style="font-family: 'Josefin', serif;">
+				<h1>Josefin <span class="badge">New</span></h1>
+				<h2>Josefin <span class="badge">New</span></h2>
+				<h3>Josefin <span class="badge">New</span></h3>
+				<h4>Josefin <span class="badge">New</span></h4>
+				<h5>Josefin <span class="badge">New</span></h5>
+				<h6>Josefin <span class="badge">New</span></h6>
 			</article>
 
 	  </div><!-- /.col-md-12 -->
