remove pagelinks, update bower bootstrap

--- a/dev/post.html
+++ b/dev/post.html
@@ -52,10 +52,8 @@
 
 <div class="container">	
 	<div class="row">
-	   
-	  <div class="col-md-1 hidden-xs hidden-sm post-nav-link text-center"><a href="#">left page</a></div>
 	  
-	  <div class="col-sm-12 col-md-10">  		
+	  <div class="col-md-12">  		
 		<article class="text-left">
 			<p class="blog-post-meta">published: 01/01/1900 by <a href="#">author</a></p>
 			<p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
@@ -93,8 +91,6 @@
 		</article>
 
 	  </div><!-- /.col-md-10 -->
-
-	  <div class="col-md-1 hidden-xs hidden-sm post-nav-link text-center"><a href="#">right pager</a></div>
 
 	</div><!-- /.row -->
 
