started page comments frame

--- a/dev/post.html
+++ b/dev/post.html
@@ -89,11 +89,17 @@
 			<p class="blog-post-meta">posted in: <a href="#">category</a></p>
 				
 		</article>
-
-	  </div><!-- /.col-md-10 -->
-
+  		</div><!-- /.col-md-12 -->
 	</div><!-- /.row -->
+</div><!-- /.container-fluid -->
 
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12" style="height:300px;background:#79B694;border-bottom:1px solid #052354;">
+			comments section<br />
+			comments section<br />
+		</div>
+	</div><!-- /.row -->	
 </div><!-- /.container-fluid -->
 
 <footer class="container-fluid text-center">
@@ -107,7 +113,7 @@
 		<div class="col-md-12">
 			<p><small>footer small copy text and notes</small></p>
 		</div>		
-	</div>
+	</div><!-- /.row -->
 
 </footer>
 
