--- a/dev/post.html
+++ b/dev/post.html
@@ -87,16 +87,23 @@
 	</div><!-- /.row -->
 </div><!-- /.container -->
 
-<div class="container-fluid blog-author-meta">
+<div class="container-fluid text-center blog-author-meta">
 	<div class="row">
-		<div class="col-md-10 col-md-offset-1">
-			<p class="blog-post-meta-category">posted in: <a href="#">category</a> on: <a href="#">01/01/1999</a></p>
-			
+		<div class="col-xs-12 col-sm-6">
+			<p class="blog-post-meta-category">posted on: {date} 06/27/2014, category: <a href="#">{category}</a></p>
+		</div><!-- /.col-sm-12 col-md-6 -->			
+		<div class="col-xs-12 col-sm-6">
 			<p class="blog-post-meta-tags"><a href="#">tag</a>, <a href="#">tag</a>, <a href="#">tag</a></p>
-			
+		</div><!-- /.col-sm-12 col-md-6 -->	
+	</div><!-- /.row -->
+
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">		
 			<footer class="post-author-meta">
+				<img class="img-circle pull-right" src="http://www.fillmurray.com/150/150" />
 				<h4>Author Title</h4>
-				<p>Author bio</p>
+				<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+
 			</footer>
 		</div><!-- /.col-md-12 -->	
 	</div><!-- /.row -->
