--- a/dev/category.html
+++ b/dev/category.html
@@ -44,21 +44,19 @@
 
 <div class="container-fluid jumbotron primary-header text-center">	
 	<div class="row">
-		<h1>Page / Post Heading
+		<h1>Category / Archive Heading
 		 	<small>sub heading will go here</small>
 		</h1>
 	</div><!-- /.row -->
 </div><!-- /.jumbotron -->
 
-
-
-
 <div class="container">	
 	<div class="row">
 	  <div class="col-md-12">
-	  		 	  		
+	  		<h1>Posts Tagged: {term}</h1>
+
 			<article class="text-left">
-				<h3><span class="badge">New</span> Post Title <small>posted on: {date} 06/27/2014</small></h3>
+				<h3>Post Title <small>posted on: {date} 06/27/2014</small></h3>
 				<p> 
 				sit amet meatloaf beef ribs ribeye hamburger shankle turducken swine salami leberkas prosciutto. Strip steak tri-tip leberkas flank, ham salami kevin drumstick shoulder corned beef pork chop. Sausage short ribs venison beef ribs, pork biltong sirloin shank chicken flank beef landjaeger strip steak ham hock. Sirloin bresaola bacon, filet mignon turkey doner jowl salami spare... <a href="#">Read More</a>
 				</p> 
