--- a/dev/index.html
+++ b/dev/index.html
@@ -44,7 +44,7 @@
 
 <div class="container-fluid jumbotron primary-header text-center">	
 	<div class="row">
-		<h1>Page / Post Heading
+		<h1>Post Heading
 		 	<small>sub heading will go here</small>
 		</h1>
 	</div><!-- /.row -->
