--- a/dev/post.html
+++ b/dev/post.html
@@ -49,7 +49,7 @@
 	  
 	  <div class="col-sm-12 col-md-9">  		
 		<article class="text-left">
-			<h3>Page / Post Heading <span class="badge">New</span></h3>
+			<h3>Post Heading <span class="badge">New</span></h3>
 			<p class="blog-post-meta-published">published: 01/01/1900</p>
 
 			<p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
