--- a/dev/page.html
+++ b/dev/page.html
@@ -40,7 +40,9 @@
 
 <div class="container-fluid jumbotron primary-header text-center">	
 	<div class="row">
-		circle
+		<h1>Post Heading
+		 	<small>sub heading will go here</small>
+		</h1>
 	</div><!-- /.row -->
 </div><!-- /.jumbotron -->
 
