--- a/dev/index.html
+++ b/dev/index.html
@@ -20,8 +20,9 @@
 </head>
 <body>
 
-<nav class="navbar" role="navigation">
-	<div class="container-fluid primary-menu">
+
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" role="navigation">
 	        <span class="sr-only">Toggle navigation</span>
@@ -33,8 +34,8 @@
 
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html">index</a></li>
-				<li class="active"><a href="post.html">post</a></li>
+				<li class="active"><a href="index.html">index</a></li>
+				<li><a href="post.html">post</a></li>
 				<li><a href="category.html">category / archive</a></li>
 <!-- -->				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">dropdown <b class="caret"></b></a>
@@ -57,9 +58,7 @@
 
 <div class="container-fluid jumbotron primary-header text-center">	
 	<div class="row">
-		<h1>Post Heading
-		 	<small>sub heading will go here</small>
-		</h1>
+		<h1>Circle Logo</h1>
 	</div><!-- /.row -->
 </div><!-- /.jumbotron -->
 
