--- a/dev/page.html
+++ b/dev/page.html
@@ -7,6 +7,8 @@
 
 <title>NG Framework - Barebones</title>
 
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
 <link rel="stylesheet" type="text/css" href="style.css">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,31 +20,45 @@
 </head>
 <body>
 
-<div class="container-fluid primary-menu">
-	<div class="row">
-		<ul class="nav navbar-nav">
-			<li><a href="index.html">index</a></li>
-			<li><a href="post.html">post</a></li>
-			<li><a href="category.html">category / archive</a></li>
-			<li><a href="page.html">page</a></li>
-			<li><a href="contact">contact</a></li>
-		</ul>
-		<form class="navbar-form pull-right" role="search">
-			<div class="input-group form-group">
-				<input type="text" placeholder="search" class="form-control" />
-				<span class="input-group-btn">
-					<button type="submit" class="btn btn-success">S</button>
-				</span>
-			</div>
-		</form>
-	</div><!-- /.row -->
-</div><!-- /.container-fluid -->
+
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" role="navigation">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">n8g.com</a>
+	    </div><!-- /.navbar-header -->
+
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="index.html">index</a></li>
+				<li class="active"><a href="post.html">post</a></li>
+				<li><a href="category.html">category / archive</a></li>
+<!-- -->				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">dropdown <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Action</a></li>
+						<li><a href="#">Another action</a></li>
+						<li><a href="#">Something else here</a></li>
+						<li class="divider"></li>
+						<li><a href="#">Separated link</a></li>
+						<li class="divider"></li>
+						<li><a href="#">One more separated link</a></li>
+					</ul>
+				</li>
+				<li><a href="page.html">page</a></li>
+				<li><a href="contact">contact</a></li>
+			</ul>
+		</div><!-- /.collapse navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav><!-- /.navbar navbar-default -->
 
 <div class="container-fluid jumbotron primary-header text-center">	
 	<div class="row">
-		<h1>Post Heading
-		 	<small>sub heading will go here</small>
-		</h1>
+		<h1>Page Title</h1>
 	</div><!-- /.row -->
 </div><!-- /.jumbotron -->
 
