--- a/dev/post.html
+++ b/dev/post.html
@@ -197,6 +197,11 @@
 
 			<hr />	
 
+			<ul class="pager">
+			  <li class="previous disabled"><a href="#">&larr; Older</a></li>
+			  <li class="next"><a href="#">Newer &rarr;</a></li>
+			</ul>
+
 		</article>
 
 <!-- related posts -->
