--- a/dev/category.html
+++ b/dev/category.html
@@ -7,11 +7,12 @@
 
 <title>NG Framework - Barebones</title>
 
-    <!-- Bootstrap
-<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
- -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+<!-- build:css style.css -->
 <link rel="stylesheet" type="text/css" href="style.css">
+<!-- endbuild -->
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
