--- a/dev/page.html
+++ b/dev/page.html
@@ -9,7 +9,10 @@
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+<!-- build:css style.css -->
 <link rel="stylesheet" type="text/css" href="style.css">
+<!-- endbuild -->
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
