--- a/dev/post.html
+++ b/dev/post.html
@@ -9,7 +9,10 @@
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+<!-- build:css style.css -->
 <link rel="stylesheet" type="text/css" href="style.css">
+<!-- endbuild -->
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -205,7 +208,7 @@
 		</article>
 
 <!-- related posts -->
-		<div class="col-md-12 text-center">< - - related posts - - ></div>
+		<div class="col-md-12 text-center">related posts</div>
 
 <!-- FUTURE POST REFERENCES -->
 <!-- plugin, use shortcodes -->
@@ -238,7 +241,7 @@
 				<img class="img-circle pull-right" src="http://www.fillmurray.com/150/150" />
 				<h4>Author Title</h4>
 				<p class="text-left">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus</p>
-				<div class="social-links">< - - social links - - ></div>
+				<div class="social-links">social links</div>
 			</footer>
 		</div><!-- /.col-md-12 -->	
 
