closes #19, closes #14, started #10, started #29

--- a/dev/index.html
+++ b/dev/index.html
@@ -60,9 +60,9 @@
 </nav><!-- /.navbar navbar-default -->
 
 <div class="container-fluid jumbotron primary-header text-center">	
-	<div class="row">
+<!--	<div class="row">
 		<h1>Circle Logo</h1>
-	</div><!-- /.row -->
+	</div> /.row -->
 </div><!-- /.jumbotron -->
 
 
