--- a/dev/post.html
+++ b/dev/post.html
@@ -71,7 +71,7 @@
 <div class="container">	
 	<div class="row">
 	  
-	  <div class="col-sm-12 col-md-9 col-md-offset-2">  		
+	  <div class="col-sm-12 col-lg-9 col-lg-offset-2">  		
 		<article class="text-left">
 			
 			<p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
@@ -276,9 +276,30 @@
 <footer class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 top-footer">
-			<div class="col-md-4">L</div>
-			<div class="col-md-4">C</div>
-			<div class="col-md-4">R</div>
+			<div class="col-sm-4">
+				<h6>Foot Header</h6>
+				<ul>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-4">
+				<h6>Foot Header</h6>
+				<ul>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+					<li><a href="#">footer link</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-4">R</div>
 		</div>
 	</div><!-- /.row -->
 	
